
[role="lead"]
Scopri le novità della gestione Cloud Volumes ONTAP in BlueXP.

I miglioramenti descritti in questa pagina sono specifici delle funzionalità di BlueXP che consentono la gestione di Cloud Volumes ONTAP. Per scoprire le novità del software Cloud Volumes ONTAP, https://docs.netapp.com/us-en/cloud-volumes-ontap-relnotes/index.html["Vai alle Note di rilascio di Cloud Volumes ONTAP"^]



== 8 gennaio 2024



=== Nuove macchine virtuali per più zone di disponibilità di Azure

A partire da Cloud Volumes ONTAP 9.13.1, i seguenti tipi di macchine virtuali supportano le zone di disponibilità multiple Azure per le implementazioni di coppia ad alta disponibilità nuove ed esistenti:

* L16s_v3
* L32s_v3
* L48s_v3
* L64s_v3


link:https://docs.netapp.com/us-en/cloud-volumes-ontap-relnotes/reference-configs-azure.html["Configurazioni supportate in Azure"^]



== 6 dicembre 2023



=== Cloud Volumes ONTAP 9.14.1 RC1

BlueXP ora può implementare e gestire Cloud Volumes ONTAP 9.14.1 in AWS, Azure e Google Cloud.



== 5 dicembre 2023

Sono state introdotte le seguenti modifiche.



=== Nuovo supporto di regione in Azure



==== Supporto per regione a zona di disponibilità singola

Le seguenti regioni supportano ora implementazioni a zona di disponibilità singola altamente disponibili in Azure per Cloud Volumes ONTAP 9.12.1 GA e versioni successive:

* Tel Aviv
* Milano




==== Supporto di aree di disponibilità multiple

Le seguenti regioni ora supportano implementazioni a più zone di disponibilità altamente disponibili in Azure per Cloud Volumes ONTAP 9.12.1 GA e versioni successive:

* India Centrale
* Norvegia Est
* Svizzera Nord
* Sud Africa, Nord
* Emirati Arabi Uniti Nord
* Cina Nord 3


Per un elenco di tutte le regioni, vedere la https://bluexp.netapp.com/cloud-volumes-global-regions["Mappa delle regioni globali sotto Azure"^].



== 10 novembre 2023

La seguente modifica è stata introdotta con la versione 3.9.35 del connettore.


