@@ -4804,7 +4804,6 @@ Fare riferimento a.<block ref="9394861c48a8d6b1dd64975c2c0558db" category="inlin
   <block id="0882685275009e45f6167bce4081e668" category="list-text">Esaminare e creare la policy di accesso.</block>
   <block id="1f8370f663ec71e8fac7dc386794543c" category="admonition">Includere il<block ref="d740baa07e4af19d0de1f45650cf4bc0" prefix=" " category="inline-code"></block> se questa risorsa è stata creata per essere utilizzata per la crittografia dell'account di storage.</block>
   <block id="57a3061930625af99195891e9e561fb2" category="cell">9.13.1</block>
-  <block id="24eacd330f66ba30cc845660c1efa967" category="list-text">Per le release di patch (P), è possibile eseguire l'aggiornamento da una release di versione a qualsiasi P-release della versione successiva.</block>
   <block id="99430eacf0d5244d50939eea94bd5962" category="paragraph">Ecco alcuni esempi:</block>
   <block id="1893a0478b381d08866888a1c7f8607a" category="list-text">9.13.0 &gt; 9.13.1P15</block>
   <block id="4ae2d614cc725ba442c80c740c08f75f" category="list-text">9.12.1 &gt; 9.13.1P2</block>
@@ -5195,10 +5194,18 @@ Fare riferimento a.<block ref="9394861c48a8d6b1dd64975c2c0558db" category="inlin
   <block id="9864c286612d20c437e06d1612a86f2d" category="summary">BlueXP crea gruppi di sicurezza AWS che includono le regole in entrata e in uscita di cui Cloud Volumes ONTAP ha bisogno per funzionare correttamente. Si consiglia di fare riferimento alle porte a scopo di test o se si preferisce utilizzare i propri gruppi di protezione.</block>
   <block id="87ade7583253b06f01182c970d65aacd" category="paragraph">BlueXP crea regole di Google Cloud Firewall che includono le regole in entrata e in uscita di cui Cloud Volumes ONTAP ha bisogno per funzionare correttamente. Si consiglia di fare riferimento alle porte per scopi di test o se si preferisce utilizzare le proprie regole firewall.</block>
   <block id="f297f6161ef6c027c4e0cd622d4c9f53" category="paragraph">La funzione ARP è disponibile solo con le licenze BYOL (da 1 a 36 mesi) sia sui modelli di licenza basati sulla capacità che su nodi. Per acquistare una nuova licenza aggiuntiva separata da utilizzare con la funzionalità ARP di Cloud Volumes ONTAP, è necessario contattare il rappresentante commerciale NetApp.</block>
-  <block id="69f67d4caf75d0a80b925b65a04419a0" category="paragraph">La licenza ARP è considerata una licenza "mobile", il che significa che non è legata a una singola istanza Cloud Volumes ONTAP e può essere applicata a più ambienti Cloud Volumes ONTAP.</block>
   <block id="9edc62814e18ad5dad22ed4f08602be6" category="admonition">L'utilizzo della funzione ARP con le licenze Cloud Volumes ONTAP basate su nodi non è attualmente presente nel Digital Wallet. La possibilità di visualizzare l'utilizzo dell'ARP basato su nodi sarà disponibile in Digital Wallet in una versione futura.</block>
   <block id="36228eb2dbf48b5f5e080f1abf747714" category="paragraph">Acquistando una licenza add-on e aggiungendola al portafoglio digitale, puoi abilitare ARP per volume con Cloud Volumes ONTAP. La ricarica per ARP viene misurata a un livello di volume, in base alla capacità totale dei volumi con la funzione ARP abilitata. La capacità minima di licenza è di 1TB TB. Tuttavia, non è prevista una ricarica della capacità minima per la funzione ARP.</block>
-  <block id="2a51dc407e4b9108dfb0e2caff776939" category="paragraph">I volumi abilitati per ARP hanno lo stato designato "modalità di apprendimento" o "attivo". Qualsiasi volume con stato ARP "Disabilitato" è escluso dalla ricarica. Ad esempio, un ambiente Cloud Volumes ONTAP con 30 TiB di capacità sottoposta a provisioning può scegliere di avere solo un sottoinsieme di volumi 15TiB con ARP attivato.</block>
   <block id="bab89553328d9045a17e6cd7ae426ebe" category="paragraph">La configurazione di ARP per i volumi viene eseguita tramite Gestore di sistema di ONTAP e CLI di ONTAP.</block>
   <block id="41040f9c93f65d2edb4f6b2d1dc680a4" category="admonition">L'utilizzo dello storage e della rete viene calcolato in gigabyte binari (GB), dove 1GB è 2^30 byte. Questa unità di misura è nota anche come gibibyte (GiB). Analogamente, 1TB è 2^40 byte, cioè 1024 GB.</block>
+  <block id="35588fa7f53bdbd040bfa9c96c87bf3d" category="section-title">16 gennaio 2024</block>
+  <block id="9ed7d4ae8d042664394e899e9c1f5e9a" category="section-title">Release di patch in BlueXP</block>
+  <block id="5c04c0351e9f1e168f13ca5689c21d92" category="paragraph">Le release delle patch sono disponibili in BlueXP solo per le tre versioni più recenti di Cloud Volumes ONTAP.</block>
+  <block id="debc8fcbe9103b95d21857d1276dbb26" category="paragraph"><block ref="debc8fcbe9103b95d21857d1276dbb26" category="inline-link-macro-rx"></block></block>
+  <block id="fa8624c42ea6d2ce73d1dbb434c41dc8" category="paragraph">La licenza ARP è considerata una licenza "mobile", il che significa che non è legata a una singola istanza Cloud Volumes ONTAP e può essere applicata a più ambienti Cloud Volumes ONTAP.</block>
+  <block id="a7453af7846f7db9aba5aa90fa8093e5" category="paragraph">I volumi abilitati per ARP hanno lo stato designato "modalità di apprendimento" o "attivo". Qualsiasi volume con stato ARP "Disabilitato" è escluso dalla ricarica. Ad esempio, un ambiente Cloud Volumes ONTAP con 30 TiB di capacità sottoposta a provisioning può scegliere di avere solo un sottoinsieme di volumi TIB 15 con ARP attivato.</block>
+  <block id="677ee5101eb2acd8a357643d03784fa7" category="section-title">Rilascio delle patch</block>
+  <block id="25163e975710186a452c0f2fefe81448" category="inline-xref">Download dell'immagine ONTAP in corso</block>
+  <block id="17464ff13145a21ed61cc7a0b9513ce7" category="paragraph">A partire da gennaio 2024, gli aggiornamenti delle patch sono disponibili in BlueXP solo se rappresentano una release di patch per le tre ultime versioni di Cloud Volumes ONTAP. Utilizziamo l'ultima release di GA per determinare le tre versioni più recenti da visualizzare in BlueXP. Ad esempio, se la release corrente di GA è 9.13.1, le patch per 9.11.1-9.13.1 vengono visualizzate in BlueXP. Se si desidera eseguire l'aggiornamento a una versione di patch per le versioni 9.11.1 o precedenti, sarà necessario utilizzare la procedura di aggiornamento manuale <block ref="741f5e59386960528e5ac58506855727" category="inline-xref-macro-rx"></block>.</block>
+  <block id="b0b450f5a78908e6b78f5c13bf6b0da4" category="paragraph">Come regola generale per le release di patch (P), è possibile eseguire l'aggiornamento da una versione a qualsiasi versione P-release della versione corrente in esecuzione o della versione successiva.</block>
 </blocks>
